--- a/CrossSegmentationExplorer/Resources/UI/SegModelsDialog.ui
+++ b/CrossSegmentationExplorer/Resources/UI/SegModelsDialog.ui
@@ -129,7 +129,7 @@
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'.AppleSystemUIFont'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; line-height:18px; background-color:#1f1f1f;&quot;&gt;&lt;span style=&quot; font-family:'Menlo','Monaco','Courier New','monospace'; font-size:12px; color:#ce9178;&quot;&gt;Group multiple segmentation files into one model for joint display. Models include segmentation files whose series descriptions contain keywords associated with that model. Click '+' to add or modify models and their keywords. &lt;/span&gt;&lt;span style=&quot; font-family:'Menlo','Monaco','Courier New','monospace'; color:#ce9178;&quot;&gt;Click '-' to delete the created model.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Menlo','Monaco','Courier New','monospace'; font-size:12px; color:#ce9178; background-color:transparent;&quot;&gt;Group multiple segmentation files into one model for joint display. Models include segmentation files whose series descriptions contain keywords associated with that model. Click '+' to add or modify models and their keywords. Click '-' to delete the created model.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
  </widget>
