critical issues fixes by Claude Code

--- a/CrossSegmentationExplorer/Resources/UI/CrossSegmentationExplorer.ui
+++ b/CrossSegmentationExplorer/Resources/UI/CrossSegmentationExplorer.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>SegmentationComparison</class>
- <widget class="qMRMLWidget" name="SegmentationComparison">
+ <class>CrossSegmentationExplorer</class>
+ <widget class="qMRMLWidget" name="CrossSegmentationExplorer">
   <property name="geometry">
    <rect>
     <x>0</x>
